Fixed layout break by wide messages

--- a/client/common/blocks/markup/markup.styl
+++ b/client/common/blocks/markup/markup.styl
@@ -5,6 +5,9 @@
 .markup
   font-family sansWideFontFamily
 
+  // Avoid layout width break by long strings
+  overflow auto
+
   // External images
   .image
     max-width 100%
